--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,16 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+ /* Inter Font */
+@import url('https://fonts.googleapis.com/css2?family=Alkatra&family=Archivo&family=Fira+Sans&family=Indie+Flower&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
+body, html {
+  font-family: 'Inter', sans-serif;
+}
+
+.signature {
+  font-family: 'Great Vibes', cursive;
+}
