--- a/src/components/contact/contactModal/ContactModal.css
+++ b/src/components/contact/contactModal/ContactModal.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  /* background-color: #262626; */
   backdrop-filter: blur(0.5rem);
   display: flex;
   justify-content: center;
@@ -13,9 +13,10 @@
 }
 
 .modal {
-  background-color: #065f46;
+  background-color: #047857;
   padding: 0.5rem;
   border-radius: 5px;
+  position: fixed;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   z-index: 1010;
 }
@@ -23,7 +24,8 @@
 .modal-close {
   position: absolute;
   color: #047857;
-  top: 6rem;
-  right: 51.5rem;
+  font-size: 3rem;
+  top: 0;
+  right: 5%;
   cursor: pointer;
 }
